--- a/emhass/templates/index.html
+++ b/emhass/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>EMHASS: Energy Management Optimization for Home Assistant</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../static/style.css">
     </head>
     <body>
         {% for plot in injection_dict %}
