Updated to version 0.1.18

--- a/emhass/templates/index.html
+++ b/emhass/templates/index.html
@@ -48,6 +48,11 @@
             "crossDomain": true,
             "url": url,
             "method": "POST",
+            "headers": {
+                'Content-Type':'application/json'
+            },
+            "dataType": 'json',
+            "data": {}
             }
             $.ajax(settings).done(function (response) {
             });
@@ -59,6 +64,11 @@
             "crossDomain": true,
             "url": url,
             "method": "POST",
+            "headers": {
+                'Content-Type':'application/json'
+            },
+            "dataType": 'json',
+            "data": {}
             }
             $.ajax(settings).done(function (response) {
             });
