Fix - Fixed errors prepared new release

--- a/emhass/templates/index.html
+++ b/emhass/templates/index.html
@@ -52,7 +52,7 @@
                 'Content-Type':'application/json'
             },
             "dataType": 'json',
-            "data": {}
+            "data": '{}'
             }
             $.ajax(settings).done(function (response) {
             });
@@ -68,7 +68,7 @@
                 'Content-Type':'application/json'
             },
             "dataType": 'json',
-            "data": {}
+            "data": '{}'
             }
             $.ajax(settings).done(function (response) {
             });
