--- a/emhass/templates/index.html
+++ b/emhass/templates/index.html
@@ -42,7 +42,7 @@
     </body>
     <script>
         document.getElementById('dayahead-optimization').addEventListener('click', function() {
-            var url = "http://localhost:5000/action/dayahead-optim"
+            var url = "/action/dayahead-optim"
             var settings = {
             "async": true,
             "crossDomain": true,
@@ -58,7 +58,7 @@
             });
         });
         document.getElementById('publish-data').addEventListener('click', function() {
-            var url = "http://localhost:5000/action/publish-data"
+            var url = "/action/publish-data"
             var settings = {
             "async": true,
             "crossDomain": true,
